tests/negative/syntax/malformed_function.stream
// EXPECT: Syntax Error
function bad(a, b) { // Missing types
    return a + b;
}